[tool.poetry]
name = "testing-kerastuner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
opencv-python = "^4.5.5"
sklearn = "^0.0"
tensorflow = "^2.8.0"
keras-tuner = "^1.1.2"
pydot = "^1.4.2"
graphviz = "^0.20"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
